2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/gcc-torture-execute-*:
	  Add more GCC tests, RFE #652.

2019-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-gbz80.def:
	  Improve fix for bug #2914.

2019-11-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCval.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  C2X u8 character constants (N2418).

2019-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  support/regression/tests/bug-2942.c:
	  Fix bug #2942.

2019-11-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/pdk15-stack-auto/spec.mk:
	  Increase timeout for regression testing on ARMv6.

2019-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClrange.c:
	  Allow more live-range shortening for stm8, pdk.

2019-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve wide & by small constants and register result.
	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/valdiag/tests/bug-2940.c:
	  Fix bug #2940.

2019-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Fix a bug in optimization of tail calls in interrupt handlers.

2019-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Fix Windows installation of pdk13 and pdk15-stack-auto files.

2019-11-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in: prefer static linked libz
	  for the Windows snapshot builds so that we don't need another DLL

2019-11-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/SDCCopt.c,
	  support/regression/tests/bug-2907.c:
	  Fix bug #2907.